# online_store

./: Dockerfile  README.md  docker-compose.yml  dump.rdb  entrypoint.sh  pyproject.toml
cart/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cartitem_options_alter_cartitem_product.py  0002_initial.py  0003_alter_cartitem_product.py  0004_cartitem_paid.py
core/: celery.py  settings.py  urls.py
core/middlewares/: user_activity_middleware.py
orders/: admin.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderitem_options_and_more.py  0002_initial.py  0003_alter_order_status.py  0003_initial.py  0004_alter_order_status.py  0005_alter_order_status.py  0006_orderitem_total_price_alter_orderitem_product.py  0007_remove_orderitem_total_price.py
parser/: parser.py
payments/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py
products/: admin.py  filters.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0002_remove_items_subcategory_remove_subcategory_name_and_more.py  (+5 more)
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
shipping/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
(+12 files in other folders)
